// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders a closed sidebar 1`] = `
<div>
  <div
    class="sidebar sidebar-light sidebar-sm"
  />
</div>
`;

exports[`Sidebar renders a sidebar with a header with title and subtitle 1`] = `
<div>
  <div
    class="sidebar sidebar-light sidebar-sm"
  >
    <div
      class="sidebar-header"
    >
      <div
        class="sidebar-section autofit-row autofit-row-center"
      >
        <div
          class="autofit-col autofit-col-expand"
        >
          <div
            class="font-weight-bold text-truncate-inline"
          >
            <span
              class="text-truncate"
            >
              Title
            </span>
          </div>
        </div>
        <div
          class="autofit-col"
        >
          <button
            class="component-action btn btn-monospaced btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times-small"
              role="presentation"
            >
              <use
                xlink:href="#times-small"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidebar renders a sidebar with body with custom content 1`] = `
<div>
  <div
    class="sidebar sidebar-light sidebar-sm"
  >
    <div
      class="sidebar-body"
    >
      <div>
        Custom content text
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidebar renders an open sidebar 1`] = `
<div>
  <div
    class="sidebar sidebar-light sidebar-sm"
  />
</div>
`;
